Quick fix to overflow x. Added discord icon. Updated roadmap with filters

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@ html {
   font-family: sans-serif;
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 .dark body {
